cmd/tscc/testdata/compiler/InternalAliasFunctionInsideLocalModuleWithoutExportAccessError.txtar
# Ported from tests/cases/compiler/internalAliasFunctionInsideLocalModuleWithoutExportAccessError.ts by tools/portcase.
# DO NOT EDIT by hand; re-run the porter if the upstream baseline changes.
! exec tscc --module commonjs --target es2015 --lib es2015,dom --out-js internalAliasFunctionInsideLocalModuleWithoutExportAccessError.js internalAliasFunctionInsideLocalModuleWithoutExportAccessError.ts
stderr 'TS2339'
! exists internalAliasFunctionInsideLocalModuleWithoutExportAccessError.js
! exists internalAliasFunctionInsideLocalModuleWithoutExportAccessError.d.ts
! exists internalAliasFunctionInsideLocalModuleWithoutExportAccessError.js.map

-- internalAliasFunctionInsideLocalModuleWithoutExportAccessError.ts --
export namespace a {
    export function foo(x: number) {
        return x;
    }
}

export namespace c {
    import b = a.foo;
    var bVal = b(10);
    export var bVal2 = b;
}
var d = c.b(11);
